# src/domain/models/relatoriosPaginatedData.ts
@@ -1,0 +1,20 @@
+/**
+ * API de finanças M&J
+ * API de controle financeiro do Júnior e da Vivi
+ *
+ * The version of the OpenAPI document: 1.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { PaginationMeta } from "./paginationMeta";
+import { RelatoriosResponse } from "./relatoriosResponse";
+import { TransacoesResume } from "./transacoesResume";
+
+export interface RelatoriosPaginatedData {
+  meta: PaginationMeta;
+  rows: Array<RelatoriosResponse>;
+  resume: TransacoesResume;
+}
